boot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-servicet-deployment
spec:
  selector:
    matchLabels:
      app: post-service
  replicas: 2
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service-container
          image: gyongcode/post-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: post-service-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: post-service
