ingress-boot.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-post-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /post-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: boot-service
                port:
                  number: 8001
